API creation and Test Jupiter